[workspace]
resolver = "2"
members = [
  "server",
  "client",
  "protocol",
  "job-security",
]

[workspace.dependencies]
nix = { version = "0.27", default-features = false, features = [] }
tokio = "1"
bincode = "1"
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false }
withfd = { version = "0.1", git = "https://github.com/Banyc/withfd.git" }
tracing = "0.1"
libc = "0.2"
