[package]
name = "job-security-server"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
description = "Universal job control - server library"
categories = ["command-line-utilities"]
repository = "https://github.com/yshui/job-security"
version = "0.1.6"
license = "MPL-2.0"
edition = "2021"

[dependencies]
bincode.workspace = true
dlv-list = "0.5"
futures-util = { workspace = true, features = ["sink", "alloc"] }
indexmap = "2"
nix = { workspace = true, features = ["term", "process", "ioctl", "fs"] }
palaver = "0.2"
protocol = { version = "0.1", path = "../protocol", package = "job-security-protocol" }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true, features = ["process", "net", "fs", "macros", "signal", "rt", "io-util"] }
tokio-command-fds = "0.2"
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
withfd = { workspace = true, features = ["tokio"] }
